objects/UserPool__c.object
<CustomObject>
    <fields>
        <fullName>CheckedOutAt__c</fullName>
        <label>Checked Out At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckedOutBy__c</fullName>
        <label>Checked Out By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPooled__c</fullName>
        <formula>ISNULL(CheckedOutAt__c) || NOW() - CheckedOutAt__c &gt; 0.1/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Pooled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCheckedOutAt__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Checked Out At</label>
        <type>DateTime</type>
    </fields>
    <label>User Pool</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsPooled__c</columns>
        <columns>CheckedOutAt__c</columns>
        <columns>CheckedOutBy__c</columns>
        <columns>LastCheckedOutAt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>